AC_INIT([myavr-ctrl C++], [0.5], [tterm@strace.org],
             [myavr_cc], [http://xxx.com/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_HEADERS([config.h])
QT_CHECKS
AC_PROG_CXX
AC_PROG_RANLIB
AC_CONFIG_FILES([Makefile \
                 src/Makefile \
                 src/backend/Makefile \
                 src/gui/Makefile])
AC_OUTPUT

